tests/semantic/factor_err2.expected

Semantic Error [line 4]: value: "literal0"
	Unexpected r-value type: 
Expected type(s) 'Integer'; found 'String' instead.
