tests/semantic/factor_err2.mtp
(*try assinging a string literal*)
var a : integer;
begin
	a := '1'
end.